--- a/Week1/wk1hw/index.html
+++ b/Week1/wk1hw/index.html
@@ -37,6 +37,9 @@
       background-repeat: no-repeat;
       background-size: 100% 100%;
     }
+      .center {
+ text-align: center
+    }
     </style>
     </head>
     </html>
@@ -46,71 +49,80 @@
     <h3 style="text-align:center"><a href="mailto:EMAIL_ADDRESS">Figueroa.Jorge20@gmail.com</a></h3>
     <p> <br /> </p>
 
-  <html>
+<html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+
 img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+display: block;
+margin-left: auto;
+margin-right: auto;
 }
+
 </style>
 </head>
 <body>
-  <img src="https://quotefancy.com/media/wallpaper/3840x2160/2196018-Terence-McKenna-Quote-If-reality-is-code-then-it-can-be-hacked-in.jpg" 
-  width="400" 
-  height="420" />
+
+<img src="https://quotefancy.com/media/wallpaper/3840x2160/2196018-Terence-McKenna-Quote-If-reality-is-code-then-it-can-be-hacked-in.jpg" 
+width="400" 
+height="420" />
 
 </body>
+
 <p> <br /> </p>
 <p> <br /> </p>
 <p> <br /> </p>
 
 <h1>&nbsp;&nbsp;About Me</h1>
+
 <p> <br /> </p>
+
 <body>
 <head>
 
 
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My family migrated to united states from El Salvador back in the 80's escaping a civalwar, I am a first generation Salvadorian-American, and I never took advantage of schooling when I was younger so now I’m trying my best to push myself past my boundaries and comfort zone. I know there is a lot of knowledge out there and I want to learn as much as I can in my lifetime and hopefully apply those skills for something greater than myself.</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I came across TheClubhou.se accidently from my brother in law who moved down here with my from NY with his family and have then decided that since I was coming down for a fresh start that this program wis aligned which my current interest in life as far as a career in being a developer. The Clubhou.se seemed like the perfect investment in myself to learn how to program to implement these skills to build a standard web application from the front-end design to back-end data management to start my journey as a Web Developer.</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As I go thru the journey of of becoming a Web Devolper I plan on using those skill to help contribute to a DAO Project I am currently invovled in that is on the Stellar Blockchain called THE JPEG DAO where the members collaborate to provide the commnuity with amazing NFT experiences!</p>
+<p class="center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My family migrated to united states from El Salvador back in the 80's escaping a civil war, I am a first generation Salvadorian American, and I never took advantage of schooling when I was younger so now I’m trying my best to push myself past my boundaries and comfort zone. I know there is a lot of knowledge out there and I want to learn as much as I can in my lifetime and hopefully apply those skills for something greater than myself.</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I came across TheClubhou.se accidently from my brother-in-law who moved down here with my from NY with his family and have then decided that since I was coming down for a fresh start that this program wis aligned which my current interest in life as far as a career in being a developer. The Clubhou.se seemed like the perfect investment in myself to learn how to program to implement these skills to build a standard web application from the front-end design to back-end data management to start my journey as a Web Developer.</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As I go thru the journey of becoming a Web Developer I plan on using those skill to help contribute to a DAO Project I am currently involved in that is on the Stellar Blockchain called THE JPEG DAO where the members collaborate to provide the community with amazing NFT experiences!</p>
 
 <p> <br /> </p>
+<h2><p style="text-align: center;">"The greatest superpower is the ability to change yourself."</p></h2>
+<h2><p style="text-align: right;">- Naval Ravikant</p>
+
 <p> <br /> </p>
 
-<h2><p style="text-align: center;">"The greatest superpower is the ability to change yourself. - Naval Ravikant"</p></h2>
 
-<p> <br /> </p>
-<p> <br /> </p>
-<p> <br /> </p>
-
-<h3>&nbsp;&nbsp;These are some of the things I like to do on a daily basis and would like to share with you today</h3>
+<h2>&nbsp;&nbsp;These are some of the things I like to do on a daily basis and would like to share with you today</h2>
 <p> <br /> </p>
 <ul>
 <p><li>Learning new things</li></p>
 <p><li>Gaming</li></p>
 <p><li>Helping others</li></p>
 </ul>
+
+
 <p> <br /> </p>
 
 <h1>&nbsp;&nbsp;Some fun facts about me</h1>
+
+
 <ul>
-<p><li>Cooking is a passion of mine and I enjoy how it allows me to learn more about other cultures.</li></p>
-<p><li>Never try to get me to dance due to the fact that I am terrible Dancer.</li></p>
-<p><li>I can beat anyone in FIFA and all challengers are welcomed to find out.</p>
-<p><li>The only country I have ever visted outside of the America's is Italy.</li></p>
-<p><li>I have extensive knowlage about natural stone.</li></p>
-<p><li>I love using Analogies.</li></p>
-<p><li>I have had about 18 diffrent jobs in my life and each one has been a stepping stone in advancments in my career.</li></p>
-<p><li>Soccer is my favorite sport.</li></p>
-<p><li>I enjoy have discussions about ideas.</li></p>
-<p><li>I spend alot of time on twitter where I regularly post and share things that are NFT/Crypto/blockchain related.</li></p>
-</ul>
+  <p><li>Cooking is a passion of mine and I enjoy how it allows me to learn more about other cultures.</li></p>
+  <p><li>Never try to get me to dance due to the fact that I am terrible Dancer.</li></p>
+  <p><li>I can beat anyone in FIFA and all challengers are welcomed to find out.</p>
+  <p><li>I have extensive knowledge about natural stone.</li></p>
+  <p><li>I love using Analogies.</li></p>
+  <p><li>I have had about 18 different jobs in my life and each one has been a stepping stone in advancements in my career.</li></p>
+  <p><li>Soccer is my favorite sport.</li></p>
+  <p><li>I enjoy have discussions about ideas.</li></p>
+  <p><li>I spend a lot of time on twitter where I regularly post and share things that are NFT/Crypto/blockchain related.</li></p>
+</ul>  
+
 <p> <br /> </p>
-<p> <br /> </p>
-<h3>&nbsp;&nbsp;To Learn more about The JPEG DAO and its commnuity visit our website at <a href="https://www.thejpegdao.com/">www.thejpegdao.com</a></h3>
+
+<h3>&nbsp;&nbsp;To Learn more about The JPEG DAO and its commnunity visit our website at <a href="https://www.thejpegdao.com/">www.thejpegdao.com</a></h3>
+
 </body>
 </html>
 
