--- a/Week1/wk1hw/index.html
+++ b/Week1/wk1hw/index.html
@@ -27,7 +27,6 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
   <html>
     <head>
     <style>
@@ -37,9 +36,29 @@
       background-repeat: no-repeat;
       background-size: 100% 100%;
     }
-      .center {
- text-align: center
+
+html, body {
+  width: 100%;
+  height:100%;
+}
+
+body {
+    background: linear-gradient(-45deg, #e73c7e, #780ad3, #1096c7, #07c498);
+    background-size: 500% 500%;
+    animation: gradient 13s ease infinite;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
     }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
     </style>
     </head>
     </html>
