--- a/Week1/wk1hw/Website Index/index.html
+++ b/Week1/wk1hw/Website Index/index.html
@@ -48,8 +48,8 @@ html, body {
 }
 
 body {
-    background: linear-gradient(-45deg, #e73c7e, #780ad3, #1096c7, #07c498);
-    background-size: 300% 300%;
+    background: linear-gradient(-45deg, #e73c7e, #db7d12, #1096c7, #07c498);
+    background-size: 333% 333%;
     animation: gradient 13s ease infinite;
 }
 
