--- a/Week1/wk1hw/Website Index/index.html
+++ b/Week1/wk1hw/Website Index/index.html
@@ -49,7 +49,7 @@ html, body {
 
 body {
     background: linear-gradient(-45deg, #e73c7e, #db7d12, #1096c7, #07c498);
-    background-size: 333% 333%;
+    background-size: 800% 800%;
     animation: gradient 13s ease infinite;
 }
 
@@ -88,7 +88,7 @@ margin-right: auto;
 </head>
 <body>
 
-<img src="https://quotefancy.com/media/wallpaper/3840x2160/2196018-Terence-McKenna-Quote-If-reality-is-code-then-it-can-be-hacked-in.jpg" 
+<img src="https://quotefancy.com/media/wallpaper/3840x2160/2196018-Terence-McKenna-Quote-If-reality-is-code-then-it-can-be-hacked-in.jpg" alt="Terrence M Quote"
 width="400" 
 height="420" />
 
