--- a/Week1/wk1hw/Website Index/index.html
+++ b/Week1/wk1hw/Website Index/index.html
@@ -70,7 +70,7 @@ body {
 
     <h1 style="text-align:center">Welcome to my landing page</h1>
     <h2 style="text-align:center">Jorge Figueroa</h2>
-    <h3 style="text-align:center"><a href="mailto:EMAIL_ADDRESS">Figueroa.Jorge20@gmail.com</a></h3>
+    <h3 style="text-align:center"><a href="mailto:EMAIL_ADDRESS">fig.jay369@gmail.com</a></h3>
     <p> <br /> </p>
 
 <html>
