--- a/Week2/MySigniture.html
+++ b/Week2/MySigniture.html
@@ -12,37 +12,37 @@
 <table style="font-family:Verdana, Open Sans, Helvetica, sans-serif;" cellpadding="0" cellspacing="0" class="ng-scope">
  <tbody>
   <tr>
-   <td style="width:110px; padding-left:0;padding-right:5; font-family:Verdana; text-align:center; vertical-align:middle;" valign="middle" width="110">
-    <img ng-if="showField('photo')" ng-src="http://www.evan-gertis.com/images/me_logo.png" alt="Photograph" width="90" height="90" border="0" style="width:90px; height:90px; border-radius:50px; border:0;" class="ng-scope" src="http://www.evan-gertis.com/images/me_logo.png">
+   <td style="width:150px; padding-left:2;padding-right:5; font-family:Verdana; text-align:center; vertical-align:middle;" valign="middle" width="110">
+    <img ng-if="showField('photo')" ng-src="https://anchor.thejpegdao.com/JPEG.png" alt="Photograph" width="133" height="133" border="0" style="width:133px; height:133px; border-radius:none; border:0;" class="ng-scope" src="https://anchor.thejpegdao.com/JPEG.png">
    </td>
-   <td style="font-family:Open Sans; border-bottom:3px solid #9af313; padding:0; vertical-align:top;" valign="top">	
+   <td style="font-family:Open Sans; border-bottom:3px solid #13a1f3; padding:0; vertical-align:top;" valign="top">	
     <table style="font-family:Open Sans, Helvetica, sans-serif;" cellpadding="0" cellspacing="0">
      <tbody>
       <tr>
        <td style="font-family:Open Sans; padding-bottom:0px; padding-top:0; padding-left:0; padding-right:0; vertical-align:top;" valign="top">
-        <strong><span style="font-family:Open Sans, Verdana; color:#169300; font-size:12.5pt; font-weight: 700;" class="ng-binding">Jorge Figueroa</span></strong><br>
+        <strong><span style="font-family:Open Sans, Verdana; color:#007693; font-size:12.5pt; font-weight: 700;" class="ng-binding">Jorge Figueroa</span></strong><br>
        </td>
        </tr>
        <tr>
        <td>
-		   <span style="font-family:Open Sans; color: rgb(101, 130, 146); font-size:10pt; font-weight: 700; line-height: 20px;" ng-if="showField('title')" class="ng-binding ng-scope">M.S. Computer Science Georgia Southern</span>
+		   <span style="font-family:Open Sans; color: rgb(101, 130, 146); font-size:10pt; font-weight: 700; line-height: 20px;" ng-if="showField('title')" class="ng-binding ng-scope">The JPEGDAO</span>
        </td>
        <tr>
        <td>
-       <span style="font-family:Open Sans; color: rgb(101, 130, 146); font-size:10pt; font-weight: 700; line-height: 20px;" ng-if="showField('title')" class="ng-binding ng-scope">B.S Physics, UNC Chapel Hill</span></td>
+       <span style="font-family:Open Sans; color: rgb(101, 130, 146); font-size:10pt; font-weight: 700; line-height: 20px;" ng-if="showField('title')" class="ng-binding ng-scope">Innovation Comittee</span></td>
       </tr>	
       <td>
-        <span style="font-family:Open Sans; color: rgb(101, 130, 146); font-size:10pt; font-weight: 700; line-height: 20px;" ng-if="showField('title')" class="ng-binding ng-scope">Certified Terraform Associate</span></td>
+        <span style="font-family:Open Sans; color: rgb(101, 130, 146); font-size:10pt; font-weight: 700; line-height: 20px;" ng-if="showField('title')" class="ng-binding ng-scope">Program Lead Core Role</span></td>
       </tr>
       <td>
-        <span style="font-family:Open Sans; color: rgb(101, 130, 146); font-size:10pt; font-weight: 700; line-height: 20px;" ng-if="showField('title')" class="ng-binding ng-scope">Security +</span></td>
+        <span style="font-family:Open Sans; color: rgb(101, 130, 146); font-size:10pt; font-weight: 700; line-height: 20px;" ng-if="showField('title')" class="ng-binding ng-scope">Verified Litemint Artist</span></td>
       </tr>	
       <td>
-        <span style="font-family:Open Sans; color: rgb(101, 130, 146); font-size:10pt; font-weight: 700; line-height: 20px;" ng-if="showField('title')" class="ng-binding ng-scope">EIT</span></td>
+        <span style="font-family:Open Sans; color: rgb(101, 130, 146); font-size:10pt; font-weight: 700; line-height: 20px;" ng-if="showField('title')" class="ng-binding ng-scope">UNBANKED</span></td>
       </tr>
       <tr ng-if="isAnyFieldEntered('email, mobile, phone')" class="ng-scope">     
        <td style="font-family:Open Sans; padding-bottom:6px; padding-top:0; padding-left:0; padding-right:0; line-height:18px; vertical-align:top; letter-spacing: 1..05;" valign="top">    
-		  <span style="font-family:Open Sans, Verdana; font-size:9pt;font-weight: 600; color: rgb(101, 130, 146);" ng-if="showField('email')" class="ng-binding ng-scope">Email: <a href="mailto: Figueroa.jorge20@gmail.com" style="color:#169300; text-decoration: none;">Figueroa.jorge20@gmail.com</a><br> 
+		  <span style="font-family:Open Sans, Verdana; font-size:9pt;font-weight: 600; color: rgb(101, 130, 146);" ng-if="showField('email')" class="ng-binding ng-scope">Email: <a href="mailto: Figueroa.jorge20@gmail.com" style="color:#003393; text-decoration: none;">Figueroa.jorge20@gmail.com</a><br> 
 		  </span><span style="font-family:Open Sans, Verdana; font-size:9pt;font-weight: 600;color: rgb(101, 130, 146);" ng-if="showField('phone')" class="ng-binding ng-scope">Phone: <a href="tel:1-631-953-7683"style="color:#169300; text-decoration: none;">631-953-7683</a><br></span>
        </td>
       </tr>
@@ -59,8 +59,8 @@
  <span ng-if="showField('youtubeURL')" class="ng-scope"><a href="https://www.youtube.com/channel/UCZmWo_-3mEjUk0xGYZrk4Tg" target="_blank"><img border="0" width="16" height="16" ng-src="https://www.netfoundry.io/email/youtube.png" alt="Facebook icon" style="border:0; height:16px; width:16px" src="https://www.netfoundry.io/email/youtube.png"></a></span>
 	
    </td>
-	  <td style="padding-top:6px; padding-bottom:0; padding-left:0; padding-right:0; color:#169300;  font-family:russo one, Verdana; font-size:11pt;letter-spacing: 1.1; vertical-align:middle;" valign="middle">Jorge Figueroa&nbsp;&nbsp;<span style="color:#c4d1d6;">|</span>&nbsp;
-    <a href="https://fig369.github.io/" target="_blank" style="color:#169300;  font-family:russo one, Verdana; font-size:11pt;letter-spacing: 1.1;text-decoration: none;" class="ng-binding">https://fig369.github.io/</a>
+	  <td style="padding-top:6px; padding-bottom:0; padding-left:0; padding-right:0; color:#004c93;  font-family:russo one, Verdana; font-size:11pt;letter-spacing: 1.1; vertical-align:middle;" valign="middle">Jorge Figueroa&nbsp;&nbsp;<span style="color:#c4d1d6;">|</span>&nbsp;
+    <a href="https://fig369.github.io/" target="_blank" style="color:#002793;  font-family:russo one, Verdana; font-size:11pt;letter-spacing: 1.1;text-decoration: none;" class="ng-binding">https://fig369.github.io/</a>
    </td>
   </tr>
  </tbody>
