--- a/Week2/MySigniture.html
+++ b/Week2/MySigniture.html
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
+
 <html xmlns="https://www.w3.org/1999/xhtml">
  <head>
 <title>Email Signature</title>
@@ -12,15 +13,15 @@
 <table style="font-family:Verdana, Open Sans, Helvetica, sans-serif;" cellpadding="0" cellspacing="0" class="ng-scope">
  <tbody>
   <tr>
-   <td style="width:150px; padding-left:2;padding-right:5; font-family:Verdana; text-align:center; vertical-align:middle;" valign="middle" width="110">
-    <img ng-if="showField('photo')" ng-src="https://anchor.thejpegdao.com/JPEG.png" alt="Photograph" width="133" height="133" border="0" style="width:133px; height:133px; border-radius:none; border:0;" class="ng-scope" src="https://anchor.thejpegdao.com/JPEG.png">
+   <td style="width:169px; padding-left:6;padding-right:5; font-family:Verdana; text-align:center; vertical-align:middle;" valign="middle" width="113">
+    <img ng-if="showField('photo')" ng-src="https://lh3.googleusercontent.com/MCEwhy_s30bL8aztMcWfE7J95oxF15FcXgw1G0lBxyEZ2nV9I_3kacNAEt83agHsuuOD0IW_LvJ4en1l6s843ay_RaFYrmYhqsQjbg=w600" alt="Photograph" width="180" height="180" border="0" style="width:180px; height:180px; border-radius:none; border:0;" class="ng-scope" src="https://lh3.googleusercontent.com/MCEwhy_s30bL8aztMcWfE7J95oxF15FcXgw1G0lBxyEZ2nV9I_3kacNAEt83agHsuuOD0IW_LvJ4en1l6s843ay_RaFYrmYhqsQjbg=w600">
    </td>
-   <td style="font-family:Open Sans; border-bottom:3px solid #13a1f3; padding:0; vertical-align:top;" valign="top">	
+   <td style="font-family:Open Sans; border-bottom:3px solid #056ba7; padding:0; vertical-align:top;" valign="top">	
     <table style="font-family:Open Sans, Helvetica, sans-serif;" cellpadding="0" cellspacing="0">
      <tbody>
       <tr>
        <td style="font-family:Open Sans; padding-bottom:0px; padding-top:0; padding-left:0; padding-right:0; vertical-align:top;" valign="top">
-        <strong><span style="font-family:Open Sans, Verdana; color:#007693; font-size:12.5pt; font-weight: 700;" class="ng-binding">Jorge Figueroa</span></strong><br>
+        <strong><span style="font-family:Open Sans, Verdana; color:#012d8d; font-size:13.69pt; font-weight: 700;" class="ng-binding">Jorge Figueroa</span></strong><br>
        </td>
        </tr>
        <tr>
@@ -59,11 +60,18 @@
  <span ng-if="showField('youtubeURL')" class="ng-scope"><a href="https://www.youtube.com/channel/UCZmWo_-3mEjUk0xGYZrk4Tg" target="_blank"><img border="0" width="16" height="16" ng-src="https://www.netfoundry.io/email/youtube.png" alt="Facebook icon" style="border:0; height:16px; width:16px" src="https://www.netfoundry.io/email/youtube.png"></a></span>
 	
    </td>
-	  <td style="padding-top:6px; padding-bottom:0; padding-left:0; padding-right:0; color:#004c93;  font-family:russo one, Verdana; font-size:11pt;letter-spacing: 1.1; vertical-align:middle;" valign="middle">Jorge Figueroa&nbsp;&nbsp;<span style="color:#c4d1d6;">|</span>&nbsp;
+	  <td style="padding-top:6px; padding-bottom:0; padding-left:0; padding-right:0; color:#004c93;  font-family:russo one, Verdana; font-size:11pt;letter-spacing: 1.1; vertical-align:middle;" valign="middle">Jorge Figueroa&nbsp;&nbsp;<span style="color:#ffffff;">|</span>&nbsp;
     <a href="https://fig369.github.io/" target="_blank" style="color:#002793;  font-family:russo one, Verdana; font-size:11pt;letter-spacing: 1.1;text-decoration: none;" class="ng-binding">https://fig369.github.io/</a>
    </td>
   </tr>
  </tbody>
 </table>
 </body>
+<p> <br /> </p>
+<p> <br /> </p>
+<p> <br /> </p>
+
 </html>
+
+
+
