--- a/Week2/day3.html
+++ b/Week2/day3.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="day3.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <p id="red">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum quaerat quae nostrum numquam, officiis eaque incidunt non labore, ipsum soluta repudiandae provident facere distinctio sint similique sit voluptatum hic expedita?</p>
