--- a/Week 4/JavascriptModule.html
+++ b/Week 4/JavascriptModule.html
@@ -11,6 +11,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/Cbc14/JavascriptModule.css" />
+    <script src="/Cbc14/Week 4/Pokemon.js"></script>
   </head>
   <body>
     <header>
