update to javascript

--- a/Week 4/todo.html
+++ b/Week 4/todo.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <title>To Do List</title>
-    <link
-      rel="stylesheet"
-      href="/Cbc14/Week4/Homework4/Todo project/todo.css"
-    />
+    <link rel="stylesheet" href="/Cbc14/Week4/Homework4/week4.css" />
   </head>
 
   <body>
@@ -15,15 +12,13 @@
         <input type="text" class="input" placeholder="Enter here...." />
         <button class="add"><i class="fas fa-plus"></i></button>
       </div>
-      <div class="container" onclick="hello(Text)"  ></div>
+      <div class="container"></div>
     </div>
 
     <div class="button_cont" align="center">
       <a class="remove_btn" onclick="removeAll()">Remove All</a>
-      
-      </div>
     </div>
   </body>
-  <script src="/Cbc14/Week4/Homework4/Todo project/todo.js"></script>
+  <script src="/Cbc14/Week4/Homework4/week4.js"></script>
   <script src="https://kit.fontawesome.com/3404b32f46.js"></script>
 </html>
