--- a/Week4/Homework4/Todo project/todo.html
+++ b/Week4/Homework4/Todo project/todo.html
@@ -15,7 +15,7 @@
         <input type="text" class="input" placeholder="Enter here...." />
         <button class="add"><i class="fas fa-plus"></i></button>
       </div>
-      <div class="container" onclick="hello(Text)"  ></div>
+      <div class="container" onclick="hello(Text)" type="text"></div>
     </div>
 
     <div class="button_cont" align="center">
