--- a/Week4/Homework4/HTML/RPS.html
+++ b/Week4/Homework4/HTML/RPS.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rock Paper Siccors</title>
+    <title>Rock Paper Sissors</title>
     <link rel="stylesheet" href="/Cbc14/Week4/Homework4/main.css" />
     <script
       src="https://kit.fontawesome.com/332a215f17.js"
