--- a/Week4/Homework4/HTML/index3.html
+++ b/Week4/Homework4/HTML/index3.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="animation.css" />
-    <title>Document</title>
+    <script src="/Cbc14/Week4/Homework4/app3.js"></script>
+    <title>Check the console...</title>
   </head>
   <body>
-    <div class="center">
-      <div class="box">
-        <h1>TEXT</h1>
-      </div>
-    </div>
+    <p>Check the console...</p>
   </body>
 </html>
