Update File location
All file links in HTML files will need to be configured. I have kept my modules as a reference for working things that are examples to go off of. I have created a new Folder called Fig where I will input all my working projects that are designed by myself or at least competed with my own code and I file accordingly overtime as these are my current needs

--- a/Week4/Homework4/HTML/indexRPS.html
+++ b/Week4/Homework4/HTML/indexRPS.html
@@ -8,6 +8,6 @@
     <title>Check the console...</title>
   </head>
   <body>
-    <button onclick="returnResult()">Play</button>
+    <center><button onclick="returnResult()">Play</button></center>
   </body>
 </html>
