--- a/Week5/Homework5/HTML/Index.html
+++ b/Week5/Homework5/HTML/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="/Cbc14/Week5/hw1.js"></script>
+    <script src="/Cbc14/Week5/Homework5/JS/hw1.js"></script>
     <title>Document</title>
   </head>
   <body></body>
