--- a/Week6/HTML/hw5.html
+++ b/Week6/HTML/hw5.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      #promise {
+        font-size: xx-large;
+        color: green;
+        align-self: center;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <p id="promise"></p>
+  </body>
+  <script src="/Cbc14/Week6/JS/hw5.js"></script>
 </html>
