update to hw 1 HTML and JS

--- a/Week7/HTML/hw1.html
+++ b/Week7/HTML/hw1.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <p>waddup</p>
+    <p>Wizard's Turn</p>
     <script src="../JS/hw1.js"></script>
   </body>
 </html>
