--- a/Week6/XMLHttpRequest/XHR-master/index.html
+++ b/Week6/XMLHttpRequest/XHR-master/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Using XML Http Request</title>
 
-	<script src="/js/xmlhttp.js" defer></script>
-	<link rel="stylesheet" href="/css/xmlhttp.css">
+	<script src="/repo/Cbc14/Week6/XMLHttpRequest/XHR-master/js/xmlhttp.js" defer></script>
+	<link rel="stylesheet" href="/repo/Cbc14/Week6/XMLHttpRequest/XHR-master/css/xmlhttp.css">
 </head>
 <body>
 	<h1>The XMLHttpRequest() Object</h1>
@@ -19,6 +19,6 @@
 	</div>
 
 	<div id="page_content">Click a button to load new content.</div>
-	
+
 </body>
 </html>
