--- a/Week7/ClockHw/HTML/clock.html
+++ b/Week7/ClockHw/HTML/clock.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Clock</title>
-    <link rel="stylesheet" href="clock2.css">
+    <link rel="stylesheet" href="/Cbc14/Week7/ClockHw/CSS/clock.css">
 </head>
 <body>
     <div id="clock">8:10:45</div>
   
-    <script src="clock2.js"></script>
+    <script src="/Cbc14/Week7/ClockHw/JS/clock.js"></script>
     
 </body>
 </html>
