--- a/Week10/week10repo/index.html
+++ b/Week10/week10repo/index.html
@@ -1,35 +1,25 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Contact Form - PHP/MySQL Demo Code</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>secure sql</title>
 </head>
-
 <body>
-<fieldset>
-<legend>Contact Form</legend>
-<form name="frmContact" method="post" action="contact.php">
-<p>
-<label for="Name">Name </label>
-<input type="text" name="txtName" id="txtName">
-</p>
-<p>
-<label for="email">Email</label>
-<input type="text" name="txtEmail" id="txtEmail">
-</p>
-<p>
-<label for="phone">Phone</label>
-<input type="text" name="txtPhone" id="txtPhone">
-</p>
-<p>
-<label for="message">Message</label>
-<textarea name="txtMessage" id="txtMessage"></textarea>
-</p>
-<p>&nbsp;</p>
-<p>
-<input type="submit" name="Submit" id="Submit" value="Submit">
-</p>
-</form>
-</fieldset>
+    <!--mayhap this needs an action?-->
+    <form action="connect.php" method="post">
+        <label for="name">name</label>
+        <input type="text" class="form-control" id="fullName" name="fullName"></input>
+        </br>
+        <label for="username">username</label>
+        <input type="text" class="form-control" id="username" name="username"></input>
+        </br>
+        <label for="email">email</label>
+        <input type="email" class="form-control" id="email" name="email"></input>
+        </br>
+        <input type="submit">
+    </form>
+    </form>
 </body>
 </html>
